# rtkcollector

./: .gitignore  AGENTS.md  CONTRIBUTING.md  NOTICE  PRIVACY.md  README.md  SECURITY.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  receiver_support.yml
.github/workflows/: android.yml
app/: build.gradle.kts
app/src/debug/: AndroidManifest.xml
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  rtklib_bridge.cpp
core/capture/: build.gradle.kts
core/correction/: build.gradle.kts
core/quality/: build.gradle.kts
core/rtklib/: build.gradle.kts
core/solution/: build.gradle.kts
docs/: android-background-operation.md  architecture.md  base-calibration-workflow.md  contributor-onboarding.md  ntrip-and-corrections.md  play-publication.md  product-requirements.md  receiver-driver-api.md  receiver-profiles.md  session-format.md  supported-receivers.md  testing-plan.md  third-party-licenses.md  user-workflows.md  workflows.md
docs/releases/: 1.0-RC1.md
docs/specification/: android-runtime.md  functional-requirements.md  index.md  publication-readiness.md  receiver-behaviour.md  security-privacy.md  session-artifacts.md  terminology.md  traceability.md  ui-requirements.md  verification-matrix.md  workflows.md
docs/specification/templates/: requirement-template.md  verification-row-template.md
docs/superpowers/: plan-status.md
docs/superpowers/plans/: 2026-06-06-rtkcollector-bootstrap.md  2026-06-06-rtkcollector-simple-ui.md  2026-06-06-rtkcollector-v1-workflows.md  2026-06-07-profiled-recording-fixes.md  2026-06-07-rtkcollector-experimental-e2e-v1.md  2026-06-07-um980-complete-e2e-v1.md  2026-06-08-compose-dashboard-ui.md  2026-06-08-field-test-hardening.md  2026-06-08-integrated-v1-usability-and-um980-telemetry.md  2026-06-09-profile-editor-selection-controls.md  2026-06-10-app-wide-ui-tidy.md  2026-06-11-logo-branding-assets.md  2026-06-11-session-browser-archive.md  2026-06-11-um980-rtk-monitoring-and-editor-input.md  2026-06-11-visual-fidelity-followup.md  (+33 more)
receiver/generic-nmea-rtcm/: build.gradle.kts
receiver/ublox-m8/: build.gradle.kts
receiver/unicore-n4/: build.gradle.kts
scripts/: check_usb_attach_contract.sh  pre_push_check.sh
testdata/: README.md
tools/: analyze_um980_session_gaps.py  check_android_test_compilation.py  check_spec_requirements.py  generate_brand_assets.py  rtklib_replay_session_check.py  rtklib_solution_summary.py  test_check_android_test_compilation.py  test_check_spec_requirements.py  test_generate_brand_assets.py  test_rtklib_native_build_files.py  test_rtklib_native_server_backend.py  test_rtklib_solution_summary.py  test_um980_protocol_gap_session.py  test_um980_rtklib_sample_check.py  test_update_rtklib_ex.py  um980_rtklib_sample_check.py  update_rtklib_ex.py
(+364 files in other folders)
